# selflearning

./: .env.example  .gitignore  README.md  azure.yaml  docker-compose.yml
.copilot/: mcp-config.json
.github/: copilot-setup-steps.yml
.github/workflows/: acr-build.yml  squad-ci.yml  squad-insider-release.yml  squad-preview.yml  squad-release.yml
.squad/: .ralph-state.json  config.json  decisions.md  routing.md  team.md
.squad/casting/: history.json  registry.json
.squad/decisions/: copilot-pin-deps-beta-migration.md  morpheus-ui-review.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-03-12T17:21:57Z-control-ui-build.md
.squad/orchestration-log/: 2026-03-12T17:21:57Z-morpheus-code-review.md  2026-03-12T17:21:57Z-oracle-ui-components.md  2026-03-12T17:21:57Z-tank-ui-build.md
docs/: architecture.md  demo-workshop.md  remote-builds.md
infra/: abbreviations.json  main.bicep
infra/modules/: ai-foundry.bicep  ai-search.bicep  container-app.bicep  container-apps-env.bicep  container-registry.bicep  cosmos-db.bicep  identity.bicep  key-vault-secrets.bicep  key-vault.bicep  monitoring.bicep  service-bus.bicep  storage.bicep
scripts/: acr-build.sh
src/api/: README.md  __init__.py  chat.py  config.py  knowledge_client.py  main.py  models.py  orchestrator_client.py  pyproject.toml  (+3 more)
src/evaluator/: README.md  __init__.py  config.py  cosmos_client.py  evaluation.py  knowledge_client.py  main.py  models.py  pyproject.toml  question_generator.py  requirements.txt  service_bus.py
src/extractor/: README.md  __init__.py  blob_storage.py  config.py  extraction.py  llm_client.py  main.py  models.py  pyproject.toml  requirements.txt  service_bus.py
tests/: README.md  conftest.py  pyproject.toml  requirements.txt  test_api.py  test_contracts.py  test_evaluator.py  test_extractor.py  test_healer.py  test_integration.py  test_knowledge.py  test_orchestrator.py  test_reasoner.py  test_scraper.py  test_shared_fixtures.py
(+127 files in other folders)
