[project]
name = "selflearning-tests"
version = "0.1.0"
description = "Test suite for selflearning services"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "respx>=0.22.0",
    "pydantic>=2.10.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "beautifulsoup4>=4.12.0",
    "azure-servicebus>=7.13.0",
    "azure-ai-inference>=1.0.0b9",
    "azure-identity>=1.19.0",
    "azure-cosmos>=4.9.0",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.24.0",
    "opentelemetry-api>=1.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: integration tests",
    "slow: slow-running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0
